// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GlobalError /> events should render showing no error by default 1`] = `
<div>
  <div
    className="global-error container"
  >
    <div
      className="row"
    >
      <div
        className="col col-12"
      >
        <div
          className="global-error__message"
        >
          <button
            className="global-error__close-button"
            onClick={[MockFunction]}
          />
          An error message.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GlobalError /> events should render showing no error by default 2`] = `
<div>
  <div
    className="global-error container"
  >
    <div
      className="row"
    >
      <div
        className="col col-12"
      >
        <div
          className="global-error__message"
        >
          <button
            className="global-error__close-button"
            onClick={
              [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              }
            }
          />
          An error message.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GlobalError /> rendering should render showing an error when defined 1`] = `
<div>
  <div
    className="global-error container"
  >
    <div
      className="row"
    >
      <div
        className="col col-12"
      >
        <div
          className="global-error__message"
        >
          <button
            className="global-error__close-button"
          />
          An error message.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GlobalError /> rendering should render showing no error by default 1`] = `<div />`;
